# runic

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ai-investigation-autocomplete-imports.md  allocator-example.zig  and_or.rn  argv-example.rn  assignment.rn  async.sh  bindings.rn  blocks-as-pipelines.rn  build.zig  build.zig.zon  call.rn  cat.rn  cat.sh  cat_ex.zig  cd-2.sh  cd.rn  cd.sh  check-mvp.rn  closure.js  closures-2.rn  closures-module.rn  closures.rn  cwd.rn  enemies.zig  env-2.sh  env.sh  errswitch.zig  executables.rn  features.md  flake.nix  for-loops.rn  function-as-pipelines.rn  hello-world-2.rn  hello-world.rn  (+92 more)
docs/: CHANGELOG.md  CONTRIBUTION_PROGRESS.md  README.md  features.md  language_reference.html  lsp.md  (+12 more)
editor/neovim/tree-sitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
editor/neovim/tree-sitter/bindings/c/: tree-sitter-runic.pc.in
editor/neovim/tree-sitter/bindings/c/tree_sitter/: tree-sitter-runic.h
editor/neovim/tree-sitter/bindings/go/: binding.go  binding_test.go
editor/neovim/tree-sitter/bindings/node/: binding.cc  index.js
editor/neovim/tree-sitter/bindings/python/tests/: test_binding.py
editor/neovim/tree-sitter/bindings/python/tree_sitter_runic/: __init__.py  binding.c
editor/neovim/tree-sitter/bindings/rust/: build.rs  lib.rs
editor/neovim/tree-sitter/bindings/swift/TreeSitterRunicTests/: TreeSitterRunicTests.swift
editor/neovim/tree-sitter/src/: grammar.json  node-types.json  parser.c
(+435 files in other folders)
